--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,3 +36,5 @@
   </div>
 
 </footer>
+<script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
