updates homepage and nav layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
       <ul class="nav navbar-nav">
         <li><a href="#">About</a></li>
         <li><a href="#">FAQ</a></li>
+        <li><a href="#">Team</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Committees <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -36,6 +37,7 @@
       </form>
     -->
       <ul class="nav navbar-nav navbar-right">
+        <p class="navbar-text lead"><a href="{{ site.facebook }}" style="color:white;"><span class="fa fa-facebook"></span></a> <a href="{{ site.twitter }}" style="color:white;"><span class="fa fa-twitter"></span></a> <a href="{{ site.instagram }}" style="color:white;"><span class="fa fa-instagram"></span></a></p>
         <li><button type="button" class="btn btn-default navbar-btn">Register</button></li>
       </ul>
     </div>
