--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,20 +13,9 @@
     <div class="collapse navbar-collapse" id="navbar-collapse-container">
       <ul class="nav navbar-nav">
         <li><a href="#">About</a></li>
+        <li><a href="{{ "/committees/" | prepend: site.baseurl }}">Committees</a></li>
         <li><a href="#">FAQ</a></li>
         <li><a href="#">Team</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Committees <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
       </ul>
       <!--
       <form class="navbar-form navbar-left" role="search">
