improves committees function
adds bootstrap table to sort committee tables, and makes more sample
committees

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,3 +17,4 @@
 </footer>
 <script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/bootstrap-table.min.js" | prepend: site.baseurl }}"></script>
