--- a/_layouts/committee.html
+++ b/_layouts/committee.html
@@ -1,16 +1,28 @@
----
-layout: default
----
-<div class="container">
-  <h1 class="page-header">{{ page.title }}</h1>
-  <div class="row">
-    <div class="col-sm-3">
-      <img class="img-responsive" src="{{ site.baseurl }}/img/committees/{{ page.pic }}" alt="Committee Picture">
-      </br>
-      <a href="#" type="button" class="btn btn-primary btn-block">View Background Guide</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    {% include head.html %}
+  </head>
+  <body>
+
+    {% include header.html %}
+
+    <div class="container">
+      <h1 class="page-header">{{ page.title }}</h1>
+      <div class="row">
+        <div class="col-sm-3">
+          <img class="img-responsive" src="{{ site.baseurl }}/img/committees/{{ page.pic }}" alt="Committee Picture">
+          </br>
+          <a href="#" type="button" class="btn btn-primary btn-block">View Background Guide</a>
+        </div>
+        <div class="col-sm-9">
+          {{ content }}
+        </div>
+      </div>
     </div>
-    <div class="col-sm-9">
-      {{ content }}
-    </div>
-  </div>
-</div>
+
+    {% include footer.html %}
+
+  </body>
+
+</html>
