--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,10 +12,10 @@
 
     <div class="collapse navbar-collapse" id="navbar-collapse-container">
       <ul class="nav navbar-nav">
-        <li><a href="#">About</a></li>
+        <li><a href="{{ "/about/" | prepend: site.baseurl }}">About</a></li>
         <li><a href="{{ "/committees/" | prepend: site.baseurl }}">Committees</a></li>
-        <li><a href="#">FAQ</a></li>
-        <li><a href="#">Team</a></li>
+        <li><a href="{{ "/faq/" | prepend: site.baseurl }}">FAQ</a></li>
+        <li><a href="{{ "/team/" | prepend: site.baseurl }}">Team</a></li>
       </ul>
       <!--
       <form class="navbar-form navbar-left" role="search">
