updates posts type: adds news page and tags element
probably will add sort by tags soon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
     <div class="collapse navbar-collapse" id="navbar-collapse-container">
       <ul class="nav navbar-nav">
         <li><a href="{{ "/about/" | prepend: site.baseurl }}">About</a></li>
+        <li><a href="{{ "/news/" | prepend: site.baseurl }}">News</a></li>
         <li><a href="{{ "/committees/" | prepend: site.baseurl }}">Committees</a></li>
         <li><a href="{{ "/faq/" | prepend: site.baseurl }}">FAQ</a></li>
         <li><a href="{{ "/team/" | prepend: site.baseurl }}">Team</a></li>
