adds content id markers to get page content easily

--- a/_layouts/committee.html
+++ b/_layouts/committee.html
@@ -22,7 +22,7 @@
           {% endif %}
         </div>
         <div class="col-sm-9">
-          <p class="lead">
+          <p class="lead" id="content">
             {{ content }}
           </p>
         </div>
