adjusts committee layout styling
changes p to div to better grep items

--- a/_layouts/committee.html
+++ b/_layouts/committee.html
@@ -22,9 +22,9 @@
           {% endif %}
         </div>
         <div class="col-sm-9">
-          <p class="lead" id="content">
+          <div class="lead" id="content">
             {{ content }}
-          </p>
+          </div>
         </div>
       </div>
     </div>
