adds social media links to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,9 @@
         <h4>{{ site.title }}</h4>
         <ul class="contact-list">
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><a href="mailto:{{ site.facebook }}"><span class="fa fa-facebook"></span> Ontario Model UN</a></li>
+          <li><a href="mailto:{{ site.twitter }}"><span class="fa fa-twitter"></span> @OntarioMUN</a></li>
+          <li><a href="mailto:{{ site.instagram }}"><span class="fa fa-instagram"></span> @ontariomodelun</a></li>
         </ul>
       </div>
 
