--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,16 +18,8 @@
         <li><a href="{{ "/faq/" | prepend: site.baseurl }}">FAQ</a></li>
         <li><a href="{{ "/team/" | prepend: site.baseurl }}">Team</a></li>
       </ul>
-      <!--
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-    -->
       <ul class="nav navbar-nav navbar-right">
-        <p class="navbar-text lead"><a href="{{ site.facebook }}" style="color:white;"><span class="fa fa-facebook"></span></a> <a href="{{ site.twitter }}" style="color:white;"><span class="fa fa-twitter"></span></a> <a href="{{ site.instagram }}" style="color:white;"><span class="fa fa-instagram"></span></a></p>
+        <p class="navbar-text lead"><a href="{{ site.facebook }}" style="color:white;"><span class="fa fa-facebook"></span></a> <a href="{{ site.twitter }}" style="color:white;"><span class="fa fa-twitter"></span></a> <a href="{{ site.instagram }}" style="color:white;"><span class="fa fa-instagram"></span></a> <a href="{{ site.github }}" style="color:white;"><span class="fa fa-github"></span></a></p>
         <li><button type="button" class="btn btn-default navbar-btn">Register</button></li>
       </ul>
     </div>
