adds static api endpoint for OMUN contact info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,11 @@
       <div class="col-sm-6">
         <h4>{{ site.title }}</h4>
         <ul class="contact-list">
-          <li><a href="mailto:{{ site.email }}"><span class="fa fa-envelope"></span> {{ site.email }}</a></li>
-          <li><a href="{{ site.facebook }}"><span class="fa fa-facebook"></span> Ontario Model UN</a></li>
-          <li><a href="{{ site.twitter }}"><span class="fa fa-twitter"></span> @OntarioMUN</a></li>
-          <li><a href="{{ site.instagram }}"><span class="fa fa-instagram"></span> @ontariomodelun</a></li>
-          <li><a href="{{ site.github }}"><span class="fa fa-github"></span> malsf21/omun.ca</a></li>
+          <li><a href="mailto:{{ site.data.contact.email }}"><span class="fa fa-envelope"></span> {{ site.data.contact.email }}</a></li>
+          <li><a href="{{ site.data.contact.facebook }}"><span class="fa fa-facebook"></span> Ontario Model UN</a></li>
+          <li><a href="{{ site.data.contact.twitter }}"><span class="fa fa-twitter"></span> @OntarioMUN</a></li>
+          <li><a href="{{ site.data.contact.instagram }}"><span class="fa fa-instagram"></span> @ontariomodelun</a></li>
+          <li><a href="{{ site.data.contact.github }}"><span class="fa fa-github"></span> malsf21/omun.ca</a></li>
         </ul>
       </div>
 
