--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         <li><a href="{{ "/team/" | prepend: site.baseurl }}">Team</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <p class="navbar-text lead"><a href="{{ site.facebook }}" style="color:white;"><span class="fa fa-facebook"></span></a> <a href="{{ site.twitter }}" style="color:white;"><span class="fa fa-twitter"></span></a> <a href="{{ site.instagram }}" style="color:white;"><span class="fa fa-instagram"></span></a> <a href="{{ site.github }}" style="color:white;"><span class="fa fa-github"></span></a></p>
+        <p class="navbar-text lead"><a href="{{ site.data.contact.facebook }}" style="color:white;"><span class="fa fa-facebook"></span></a> <a href="{{ site.data.contact.twitter }}" style="color:white;"><span class="fa fa-twitter"></span></a> <a href="{{ site.data.contact.instagram }}" style="color:white;"><span class="fa fa-instagram"></span></a> <a href="{{ site.data.contact.github }}" style="color:white;"><span class="fa fa-github"></span></a></p>
         <li><form action="{{ "/reg/" | prepend: site.baseurl }}" type="POST"><button type="submit" class="btn btn-default navbar-btn">Register</button></form></li>
       </ul>
     </div>
