preparing site for public release
adds 404 page, sets post timings, adds site-wide alerts detailing WIP,
fleshes out more page content, adds google analytics

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
       <div class="col-sm-6">
         <p>{{ site.description }}</p>
         <p>
-          Website designed by <a href="http://matthewwang.me">Matthew Wang</a>. Site and API documentation available <a href="{{site.docurl}}">here</a>.
+          This website was designed by <a href="http://matthewwang.me">Matthew Wang</a>. The site and API documentation is available <a href="{{site.docurl}}">here</a>.
         </p>
       </div>
     </div>
