--- a/_includes/docs-header.html
+++ b/_includes/docs-header.html
@@ -23,3 +23,9 @@
     </div>
   </div>
 </nav>
+
+<div class="container">
+  <div class="alert alert-danger" role="alert">
+    <span class="fa fa-exclamation-circle"></span> <strong>Danger!</strong> The OMUN Docs and API are still in <strong>alpha</strong>. The API is not well-documented and unstable; it is not recommended for production use at this time.
+  </div>
+</div>
