Documents committee and contact APIs

--- a/_includes/docs-header.html
+++ b/_includes/docs-header.html
@@ -15,7 +15,7 @@
         <li><a href="{{ "/" | prepend: site.docurl }}">Index</a></li>
         <li><a href="{{ "/setup.html" | prepend: site.docurl }}">Setup</a></li>
         <li><a href="{{ "/content.html" | prepend: site.docurl }}">Content</a></li>
-        <li><a href="#">API</a></li>
+        <li><a href="{{ "/api.html" | prepend: site.docurl }}">API</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{site.baseurl}}/">To OMUN.ca</a></li>
