completes first draft of reg system

--- a/_layouts/account.html
+++ b/_layouts/account.html
@@ -1,8 +1,8 @@
+<?php require("common.php"); ?>
 <!DOCTYPE html>
 <html>
   <head>
     {% include head.html %}
-    <?php require("reg/common.php"); ?>
   </head>
   <body>
 
