fixed-widths footer contact info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,13 +5,13 @@
       <div class="col-sm-6">
         <h4>{{ site.title }}</h4>
         <ul class="contact-list">
-          <li><a href="mailto:{{ site.data.contact.email }}"><span class="fa fa-at"></span> {{ site.data.contact.email }}</a></li>
-          <li><a href="{{ site.data.contact.facebook }}"><span class="fa fa-facebook"></span> Ontario Model UN</a></li>
-          <li><a href="{{ site.data.contact.twitter }}"><span class="fa fa-twitter"></span> @OntarioMUN</a></li>
-          <li><a href="{{ site.data.contact.instagram }}"><span class="fa fa-instagram"></span> @ontariomodelun</a></li>
-          <li><a href="{{ site.data.contact.github }}"><span class="fa fa-github"></span> malsf21/omun.ca</a></li>
-          <li><span class="fa fa-envelope"></span> 200 Lonsdale Rd, Toronto, ON M4V 1W6</li>
-          <li><span class="fa fa-phone"></span> 416-488-1125 ext. 2280</li>
+          <li><a href="mailto:{{ site.data.contact.email }}"><span class="fa fa-fw fa-at"></span> {{ site.data.contact.email }}</a></li>
+          <li><a href="{{ site.data.contact.facebook }}"><span class="fa fa-fw fa-facebook"></span> Ontario Model UN</a></li>
+          <li><a href="{{ site.data.contact.twitter }}"><span class="fa fa-fw fa-twitter"></span> @OntarioMUN</a></li>
+          <li><a href="{{ site.data.contact.instagram }}"><span class="fa fa-fw fa-instagram"></span> @ontariomodelun</a></li>
+          <li><a href="{{ site.data.contact.github }}"><span class="fa fa-fw fa-github"></span> malsf21/omun.ca</a></li>
+          <li><span class="fa fa-fw fa-envelope"></span> 200 Lonsdale Rd, Toronto, ON M4V 1W6</li>
+          <li><span class="fa fa-fw fa-phone"></span> 416-488-1125 ext. 2280</li>
         </ul>
       </div>
 
