preps for advisor package and reg release

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
           <li><a href="{{ site.data.contact.facebook }}"><span class="fa fa-fw fa-facebook"></span> Ontario Model UN</a></li>
           <li><a href="{{ site.data.contact.twitter }}"><span class="fa fa-fw fa-twitter"></span> @OntarioMUN</a></li>
           <li><a href="{{ site.data.contact.instagram }}"><span class="fa fa-fw fa-instagram"></span> @ontariomodelun</a></li>
-          <li><span class="fa fa-fw fa-envelope"></span> 200 Lonsdale Rd, Toronto, ON M4V 1W6</li>
+          <li><span class="fa fa-fw fa-envelope"></span> 200 Lonsdale Rd, Toronto, ON M4V 1W6 <b>Attn: Matt Griem </b></li>
           <li><span class="fa fa-fw fa-phone"></span> 416-488-1125 ext. 2280</li>
         </ul>
       </div>
