--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,14 @@
   height:512px;
   overflow-y:auto;
 }
+.countdown{
+  text-align: center;
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+.full-cover{
+  margin-top:-25px;
+  display:block;
+  max-height:100%;
+  max-width:auto;
+}
