fixes things that trip html proofer, cleans up general html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <p class="navbar-text lead"><a href="{{ site.data.contact.facebook }}" style="color:white;"><span class="fa fa-facebook"></span></a> <a href="{{ site.data.contact.twitter }}" style="color:white;"><span class="fa fa-twitter"></span></a> <a href="{{ site.data.contact.instagram }}" style="color:white;"><span class="fa fa-instagram"></span></a></p>
-        <li><form action="{{ "/reg/" | prepend: site.baseurl }}" type="POST"><button type="submit" class="btn btn-default navbar-btn">Register</button></form></li>
+        <li><form action="{{ "/reg/" | prepend: site.baseurl }}" type="POST" data-proofer-ignore><button type="submit" class="btn btn-default navbar-btn">Register</button></form></li>
       </ul>
     </div>
   </div>
