pushes new schedule

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
         <li><a href="{{ "/news/" | prepend: site.baseurl }}">News</a></li>
         <li><a href="{{ "/committees/" | prepend: site.baseurl }}">Committees</a></li>
         <li><a href="{{ "/faq/" | prepend: site.baseurl }}">FAQ</a></li>
+        <li><a href="{{ "/schedule/" | prepend: site.baseurl }}">Schedule</a></li>
         <li><a href="{{ "/team/" | prepend: site.baseurl }}">Team</a></li>
         <li><a href="{{ "/delegate-center/" | prepend: site.baseurl }}">Delegate Center</a></li>
       </ul>
