basically pushing a site 2.0

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,7 @@
 <link rel="icon" type="image/png" sizes="96x96" href="{{site.baseurl}}/img/favicon/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{site.baseurl}}/img/favicon/favicon-16x16.png">
 
-<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ "/css/bootstrap-paper.min.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/css/bootstrap-table.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
