--- a/_includes/docs-header.html
+++ b/_includes/docs-header.html
@@ -1,26 +1,29 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-container" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{{ "/" | prepend: site.docurl }}">OMUN Docs</a>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="{{ "/" | prepend: site.docurl }}">OMUN Docs</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="navbar-collapse-container">
-      <ul class="nav navbar-nav">
-        <li><a href="{{ "/" | prepend: site.docurl }}">Index</a></li>
-        <li><a href="{{ "/setup.html" | prepend: site.docurl }}">Setup</a></li>
-        <li><a href="{{ "/content.html" | prepend: site.docurl }}">Content</a></li>
-        <li><a href="{{ "/api.html" | prepend: site.docurl }}">API</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{site.baseurl}}/">To OMUN.ca</a></li>
-      </ul>
-    </div>
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ "/" | prepend: site.docurl }}">Index</a></li>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ "/setup.html" | prepend: site.docurl }}">Setup</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ "/content.html" | prepend: site.docurl }}">Content</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ "/api.html" | prepend: site.docurl }}">API</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav my-2 my-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" href="{{site.baseurl}}/">To OMUN.ca</a>
+      </li>
+    </ul>
   </div>
 </nav>
 
