--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,11 @@
 </br>
-<footer class="site-footer">
+<footer>
+  <hr />
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
         <h4>{{ site.title }}</h4>
-        <ul class="contact-list">
+        <ul class="list-unstyled">
           <li><a href="mailto:{{ site.data.contact.email }}"><span class="fa fa-fw fa-at"></span> {{ site.data.contact.email }}</a></li>
           <li><a href="{{ site.data.contact.facebook }}"><span class="fa fa-fw fa-facebook"></span> Ontario Model UN</a></li>
           <li><a href="{{ site.data.contact.twitter }}"><span class="fa fa-fw fa-twitter"></span> @OntarioMUN</a></li>
