--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,8 @@
 
 <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/css/bootstrap-table.min.css" | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
+<script src="{{ "/js/fontawesome-all.min.js" | prepend: site.baseurl }}"> </script>
 <script src="{{ "/js/google_analytics.js" | prepend: site.baseurl }}"></script>
