--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,9 +16,9 @@
       <li class="nav-item"><a class="nav-link" href="{{ "/delegate-center/" | prepend: site.baseurl }}">Delegate Center</a></li>
     </ul>
     <p class="navbar-text my-2 mx-2">
-      <a class="icon-white" href="{{ site.data.contact.facebook }}"><span class="fa fa-facebook"></span></a>
-      <a class="icon-white" href="{{ site.data.contact.twitter }}"><span class="fa fa-twitter"></span></a>
-      <a class="icon-white" href="{{ site.data.contact.instagram }}"><span class="fa fa-instagram"></span></a>
+      <a class="icon-white" href="{{ site.data.contact.facebook }}"><span class="fab fa-facebook"></span></a>
+      <a class="icon-white" href="{{ site.data.contact.twitter }}"><span class="fab fa-twitter"></span></a>
+      <a class="icon-white" href="{{ site.data.contact.instagram }}"><span class="fab fa-instagram"></span></a>
     </p>
     <form class="form-inline my-2 my-lg-0" action="{{site.regurl}}" type="POST" data-proofer-ignore>
       <button class="btn btn-secondary my-2 my-sm-0" type="submit">Register</button>
