--- a/_layouts/committee.html
+++ b/_layouts/committee.html
@@ -9,13 +9,13 @@
 
     <div class="container">
       <div class="row mt-2">
-        <div class="col-md-3">
+        <div class="col-lg-3">
           <div class="card card-body">
             <h1 class="display-4 d-block d-lg-none">{{ page.title }}</h1>
             <img class="img-fluid" src="{{ site.baseurl }}/img/committees/{{ page.pic }}" alt="Committee Picture">
             </br>
-            {% if page.guide %}
-            <a href="{{ site.baseurl }}/files/committees/{{page.guide}}" type="button" class="btn btn-primary btn-block btn-force-white" target="_blank">View Background Guide</a>
+            {% if site.guide %}
+            <a class="btn btn-primary" href="{{ site.baseurl }}/files/committees/{{page.short}}-BG-OMUN-{{site.year}}.pdf" role="button" target="_blank">View Background Guide</a>
             {% else %}
               <div class="text-center">
                 <span class="label label-primary">Background Guide Coming Soon!</label>
@@ -37,7 +37,7 @@
             {% endif %}
           </div>
         </div>
-        <div class="col-md-9">
+        <div class="col-lg-9">
           <div class="card card-body lead" id="content">
             <h1 class="display-4 d-none d-lg-block">{{ page.title }}</h1>
             <p>{{ page.shortbio }}</p>
