adds bg alert + alert logic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,14 @@
 
     {% include header.html %}
 
+    {% if page.type != "index" %}
+    <div class="container">
+      <div class="alert alert-dismissible alert-info mt-2">
+        Background guides are now up on their <a href="{{site.baseurl}}/committees/" class="alert-link">committee pages</a>!
+      </div>
+    </div>
+    {% endif %}
+
     {{ content }}
 
     {% include footer.html %}
