--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
       <li class="nav-item"><a class="nav-link" href="{{ "/committees/" | prepend: site.baseurl }}">Committees</a></li>
       <li class="nav-item"><a class="nav-link" href="{{ "/faq/" | prepend: site.baseurl }}">FAQ</a></li>
       <li class="nav-item"><a class="nav-link" href="{{ "/team/" | prepend: site.baseurl }}">Team</a></li>
+      <li class="nav-item"><a class="nav-link" href="{{ "/schedule/" | prepend: site.baseurl }}">Schedule</a></li>
       <li class="nav-item"><a class="nav-link" href="{{ "/delegate-center/" | prepend: site.baseurl }}">Delegate Center</a></li>
     </ul>
     <p class="navbar-text my-2 mx-2">
