--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     {% if page.type != "index" %}
     <div class="container">
       <div class="alert alert-dismissible alert-info mt-2">
-        Background guides are now up on their <a href="{{site.baseurl}}/committees/" class="alert-link">committee pages</a>!
+        <strong>Reminder!</strong> Position papers are due April 7th, the day of the conference.
       </div>
     </div>
     {% endif %}
