adds schedule notification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,11 @@
 
     {% if page.type != "index" %}
     <div class="container">
-      <div class="alert alert-dismissible alert-info mt-2">
+      <div class="alert alert-info mt-2">
         <strong>Reminder!</strong> Position papers are due April 7th, the day of the conference.
+      </div>
+      <div class="alert alert-primary mt-2">
+        Our schedule is up now, on our <a href="{{site.baseurl}}/schedule/">schedule tab</a>.
       </div>
     </div>
     {% endif %}
