minor committee page updates

--- a/_layouts/committee.html
+++ b/_layouts/committee.html
@@ -41,7 +41,9 @@
           <div class="card card-body lead" id="content">
             <h1 class="display-4 d-none d-lg-block">{{ page.title }}</h1>
             <p>{{ page.shortbio }}</p>
+            {% comment %}
             <p>Information on position papers, topics, and committee sizes are coming soon!</p>
+            {% endcomment %}
             {{ content }}
             <p>
               Check out the <a href="{{site.baseurl}}/delegate-center/">Delegate Center</a> for information on position papers, research guidelines, and general committee tips.
