--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,7 @@
     {% if page.type != "index" %}
     <div class="container">
       <div class="alert alert-info mt-2">
-        <strong>Reminder!</strong> Position papers are due April 7th, the day of the conference.
-      </div>
-      <div class="alert alert-primary mt-2">
-        Our schedule is up now, on our <a href="{{site.baseurl}}/schedule/">schedule tab</a>.
+        This is an archive of what the omun.ca website looked like as of April 8th, 2018.
       </div>
     </div>
     {% endif %}
